crates/strider-analyze/tests/snapshots/v3__mips32le__calling_convention__forward_2.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x400828:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x410000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "7" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "7" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "7" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\na1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\na0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "12" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x411064:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "14" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "17" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x411064:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
